--- a/package.json
+++ b/package.json
@@ -8,5 +8,22 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@mui/x-data-grid-premium": "^7.5.0"
+  },
+  "overrides": {
+    "@mui/x-data-grid-premium": {
+      "exceljs": {
+        "archiver": "7.0.1",
+        "unzipper": {
+          ".": "0.10.14",
+          "fstream": {
+            ".": "1.0.12",
+            "rimraf": "4.4.1"
+          }
+        }
+      }
+    }
+  }
 }
